se quita una pagina se vuelve hacer como antes

--- a/cardex/apps/templates/home/profile.html
+++ b/cardex/apps/templates/home/profile.html
@@ -177,6 +177,10 @@
             <a class="btnInf btnfuncional" href="{% url 'asignar_vacacionespdf' user_id=user.id %}"
               style="text-align: center;"> Generar documento</a>
           </div>
+          <div class="profile1">
+            <a class="btnInf btnfuncional" href="{% url 'CONTRATO_INDIVIDUALpdf' user_id=user.id %}"
+              style="text-align: center;"> CONTRATO INDIVIDUAL DE TRABAJO POR TIEMPO DETERMINADO</a>
+          </div>
 
           <hr class="my-4" />
           <h6 class="heading-small text-muted mb-4">Información de usuario</h6>
