--- a/cardex/apps/templates/home/profile.html
+++ b/cardex/apps/templates/home/profile.html
@@ -179,7 +179,7 @@
           </div>
           <div class="profile1">
             <a class="btnInf btnfuncional" href="{% url 'CONTRATO_INDIVIDUALpdf' user_id=user.id %}"
-              style="text-align: center;"> CONTRATO INDIVIDUAL DE TRABAJO POR TIEMPO DETERMINADO</a>
+              style="text-align: center;"> esto es una prueba CONTRATO INDIVIDUAL DE TRABAJO POR TIEMPO DETERMINADO</a>
           </div>
 
           <hr class="my-4" />
